# overdrive

./: .gitignore  CLAUDE.md  CNAME  Cargo.toml  LICENSE  README.md  bun.lockb  clippy.toml  deny.toml  index.html  lefthook.yml  package.json  rust-toolchain.toml  rustfmt.toml  tsconfig.json
crates/overdrive-bpf/: .gitignore  CLAUDE.md  Cargo.toml
crates/overdrive-bpf/src/: main.rs
crates/overdrive-bpf/src/maps/: backend_map.rs  drop_counter.rs  hash_of_maps.rs  local_backend_map.rs  maglev_map.rs  mod.rs  mtls_forward.rs  mtls_redirect_dest.rs  reverse_local_map.rs  reverse_local_miss_counter.rs  reverse_nat_map.rs  service_map.rs
crates/overdrive-bpf/src/programs/: cgroup_connect4_mtls.rs  cgroup_connect4_service.rs  cgroup_recvmsg4_service.rs  cgroup_sendmsg4_service.rs  mod.rs  sanity.rs  sk_skb_stream_verdict_mtls.rs  tc_reverse_nat.rs  xdp_reverse_nat.rs  xdp_service_map.rs
crates/overdrive-bpf/src/shared/: build_local_service_key.rs  csum.rs  mod.rs  sanity.rs
crates/overdrive-bpf/tests/: integration.rs
crates/overdrive-bpf/tests/integration/: bpf_artifact.rs  reverse_key_roundtrip.rs  sanity_prologue_drops.rs  tc_reverse_nat.rs  xdp_pass_test_run.rs  xdp_reverse_nat_redirect_neigh.rs  xdp_reverse_nat_udp.rs  xdp_service_map_lookup.rs  xdp_service_map_redirect_neigh.rs
crates/overdrive-cli/: CLAUDE.md  Cargo.toml
crates/overdrive-cli/examples/: dns-resolver.toml
crates/overdrive-cli/src/: cli.rs  http_client.rs  lib.rs  main.rs  render.rs
crates/overdrive-cli/src/commands/: alloc.rs  cluster.rs  deploy.rs  job.rs  mod.rs  node.rs  serve.rs  workload.rs
crates/overdrive-cli/src/render/: listener.rs  schedule.rs
crates/overdrive-cli/tests/: acceptance.rs  integration.rs
crates/overdrive-cli/tests/acceptance/: alloc_status_render.rs  insecure_rejected.rs  job_kind_render.rs  probes_kind_rejection_cli.rs  probes_section_render.rs  render_alloc_status.rs  render_cluster_and_node.rs  render_job_stop.rs  render_job_submit.rs  render_pure_fns.rs  render_workload_stop.rs  (+7 more)
crates/overdrive-control-plane/: CLAUDE.md  Cargo.toml
crates/overdrive-control-plane/proptest-regressions/: listener_facts.txt
crates/overdrive-control-plane/src/: action_shim.rs  action_shim_service_hydration.rs  api.rs  ca_boot.rs  ca_issuance.rs  cgroup_manager.rs  cgroup_preflight.rs  claim_set.rs  dataplane_config.rs  error.rs  eval_broker.rs  handlers.rs  identity_mgr.rs  iface.rs  lib.rs  libsql_provisioner.rs  listener_facts.rs  mtls_resolve_adapter.rs  observation_wiring.rs  openapi.rs  probe_runner_boot.rs  reconciler_runtime.rs  streaming.rs  tls_bootstrap.rs  veth_provisioner.rs  vip_allocator_config.rs
crates/overdrive-control-plane/tests/: acceptance.rs  compile_fail.rs  compile_pass.rs  integration.rs
crates/overdrive-core/: Cargo.toml
crates/overdrive-core/src/: claim_set.rs  error.rs  eval_broker.rs  id.rs  lib.rs  race_once_cell.rs  reconciler.rs  service_lifecycle.rs  transition_reason.rs  wall_clock.rs
crates/overdrive-core/tests/: acceptance.rs  backend_discovery_bridge_types.rs  backend_id.rs  backend_key.rs  canonical_address_bridge_advertise.rs  capture_advertise_port_set_equality.rs  compile_fail.rs  compile_pass.rs  drop_class.rs  maglev_permutation.proptest-regressions  maglev_permutation.rs  maglev_table_size.rs  mesh_backend_lb_gate.rs  newtype_proptest.proptest-regressions  newtype_proptest.rs  public_api_shape.rs  schema_evolution.rs  service_frontend.rs  service_frontend_provenance.rs  service_id.rs  service_vip.rs  service_vip_properties.rs
crates/overdrive-dataplane/: CLAUDE.md  Cargo.toml  build.rs
crates/overdrive-dataplane/src/: allocator.rs  gc.rs  lib.rs  loader.rs  swap.rs  verifier_budget.rs
crates/overdrive-dataplane/tests/: acceptance.rs  aggregate_for_class.rs  allocator_properties.rs  integration.rs  schema_evolution.rs
crates/overdrive-host/: Cargo.toml
crates/overdrive-host/src/: cgroup_fs.rs  clock.rs  dataplane.rs  entropy.rs  lib.rs  transport.rs
crates/overdrive-host/tests/: integration.rs
crates/overdrive-scheduler/: Cargo.toml
crates/overdrive-scheduler/src/: lib.rs
crates/overdrive-scheduler/tests/: acceptance.rs
crates/overdrive-sim/: Cargo.toml
crates/overdrive-sim/src/: adapters.rs  harness.rs  invariants.rs  lib.rs
crates/overdrive-sim/tests/: acceptance.rs  harness_determinism.rs  integration.rs  invariant_evaluators.rs  invariant_roundtrip.proptest-regressions  invariant_roundtrip.rs  sim_dataplane_drop_counter.rs  sim_dataplane_forward_frontend_scoped.rs  sim_dataplane_iteration.rs  sim_dataplane_reverse_nat_cross_service.rs  sim_dataplane_reverse_nat_per_proto.rs
crates/overdrive-store-local/: Cargo.toml
crates/overdrive-store-local/src/: lib.rs  observation_backend.rs  redb_backend.rs  snapshot_frame.rs
crates/overdrive-store-local/tests/: acceptance.rs  compile_fail.rs  integration.rs  local_store_edges.rs  snapshot_proptest.rs
crates/overdrive-testing/: Cargo.toml
crates/overdrive-testing/src/: lib.rs  netns.rs
crates/overdrive-worker/: Cargo.toml
crates/overdrive-worker/src/: cgroup_manager.rs  driver.rs  lib.rs  mtls_intercept.rs  mtls_intercept_worker.rs  mtls_supervisor.rs  node_health.rs
crates/overdrive-worker/tests/: acceptance.rs  compile_fail.rs  integration.rs
xtask/: Cargo.toml
xtask/src/: dev_setup.rs  dst.rs  dst_lint.rs  lib.rs  main.rs  mutants.rs  openapi.rs  yaml_free_cli.rs
xtask/src/perf_gate/: mod.rs  verifier_regress.rs  xdp_perf.rs  xdp_perf_setup.rs
xtask/src/roadmap/: gh.rs  init.rs  mod.rs  parse.rs  state.rs  sync.rs
xtask/tests/: acceptance.rs  dst_lint_async_fs_self_test.rs  dst_lint_live_literal.rs  dst_lint_self_test.rs  integration.rs  perf_gate_self_test.rs
xtask/tests/acceptance/: dst_canary_red_run.rs  dst_clean_clone_green.rs  dst_harness_smoke.rs  dst_lint_banned_apis.rs  dst_lint_catches_reconciler_violation.rs  dst_seeded_reproduction.proptest-regressions  dst_seeded_reproduction.rs  openapi_gate.rs
xtask/tests/integration/: bpf_build.rs  crate_class_metadata.rs  dev_setup_bpf_linker.rs  perf_gate_self_test.rs
(+1839 files in other folders)
