[package]
name        = "xtask"
version     = "0.0.0"
description = "Developer / CI entry points. Invoked via `cargo xtask <cmd>`."
edition.workspace       = true
rust-version.workspace  = true
license.workspace       = true
authors.workspace       = true
repository.workspace    = true
homepage.workspace      = true
publish.workspace       = true

[lib]
name = "xtask"
path = "src/lib.rs"

[[bin]]
name = "xtask"
path = "src/main.rs"

[lints]
workspace = true

[features]
# Opt-in gate for xtask's integration-test binaries
# (`tests/acceptance.rs` and `tests/dst_lint_self_test.rs`). The
# twin-run proptest boots a 3-host harness 32 times. Off by default
# so `cargo nextest run --workspace` stays fast; enable with
# `--features xtask/integration-tests` (or `-p xtask --features
# integration-tests`) when you want to exercise them.
integration-tests = []

[package.metadata.overdrive]
crate_class = "binary"

[dependencies]
eyre.workspace       = true
color-eyre.workspace = true
clap.workspace       = true
serde.workspace      = true
serde_json.workspace = true
dotenvy.workspace    = true
syn.workspace        = true
rand.workspace       = true
overdrive-sim        = { path = "../crates/overdrive-sim" }
# `openapi-gen` / `openapi-check` call
# `overdrive_control_plane::api::OverdriveApi::openapi()` to render the
# live schema — ADR-0009.
overdrive-control-plane = { path = "../crates/overdrive-control-plane" }
utoipa.workspace     = true
# `span-locations` enables `Span::start()`/`end()` — required so
# dst-lint can report `file:line:col` for each violation.
proc-macro2          = { version = "1", features = ["span-locations"] }
cargo_metadata       = "0.18"

[dev-dependencies]
proptest.workspace = true
tempfile.workspace = true
serial_test.workspace = true
