[package]
name        = "xtask"
version     = "0.0.0"
description = "Developer / CI entry points. Invoked via `cargo xtask <cmd>`."
edition.workspace       = true
rust-version.workspace  = true
license.workspace       = true
authors.workspace       = true
repository.workspace    = true
homepage.workspace      = true
publish.workspace       = true

[lib]
name = "xtask"
path = "src/lib.rs"

[[bin]]
name = "xtask"
path = "src/main.rs"

[lints]
workspace = true

[features]
# Opt-in gate for xtask's integration-test binaries
# (`tests/acceptance.rs` and `tests/dst_lint_self_test.rs`). The
# twin-run proptest boots a 3-host harness 32 times. Off by default
# so `cargo nextest run --workspace` stays fast; enable with
# `--features xtask/integration-tests` (or `-p xtask --features
# integration-tests`) when you want to exercise them.
integration-tests = []

[package.metadata.overdrive]
crate_class = "binary"

[dependencies]
# xtask is the build / test / dev orchestrator only; runtime tools
# (`dst`, `openapi`, `cli`, …) live in their owning crate's `src/bin/`.
# See § "xtask is build / test / dev orchestration, NOT a runtime entry
# point" in `.claude/rules/development.md`. xtask MUST NOT depend on
# `overdrive-{core,sim,control-plane,dataplane,host,worker,…}` —
# adding such a dep drags the runtime crate's `build.rs` into xtask's
# compile chain and re-creates the bootstrap chicken-and-egg this
# reorg fixed.
eyre.workspace       = true
color-eyre.workspace = true
clap.workspace       = true
serde.workspace      = true
serde_json.workspace = true
dotenvy.workspace    = true
syn.workspace        = true
rand.workspace       = true
# `span-locations` enables `Span::start()`/`end()` — required so
# dst-lint can report `file:line:col` for each violation.
proc-macro2          = { version = "1", features = ["span-locations"] }
cargo_metadata       = "0.18"

[dev-dependencies]
proptest.workspace = true
tempfile.workspace = true
serial_test.workspace = true
