[package]
name        = "overdrive-cli"
version     = "0.0.0"
description = "Overdrive command-line client."
edition.workspace       = true
rust-version.workspace  = true
license.workspace       = true
authors.workspace       = true
repository.workspace    = true
homepage.workspace      = true
publish.workspace       = true

[package.metadata.overdrive]
crate_class = "binary"

[lib]
name = "overdrive_cli"
path = "src/lib.rs"

[[bin]]
name = "overdrive"
path = "src/main.rs"

# Test-fixture binary consumed by `examples/coinflip-as-service.toml`
# (Fixture A) for the K1 100-seed honesty loop in step 01-03f-2. Per
# `.claude/rules/development.md` § "src/ is production code — tooling
# binaries live in bin/": this is a test-only fixture with no library
# consumer; it lives at `bin/` and needs an explicit `[[bin]]` entry
# because Cargo's autodiscovery covers `src/bin/` only.
[[bin]]
name = "coinflip_helper"
path = "bin/coinflip_helper.rs"

[lints]
workspace = true

[features]
# Opt-in gate for slow / real-infra tests in this crate. Off by
# default so `cargo nextest run --workspace` stays under the 60s
# slow-test budget; CI exercises the gate in a dedicated
# `integration` job. Per `.claude/rules/testing.md`.
integration-tests = []

[dependencies]
overdrive-core.workspace           = true
# `overdrive-host` — production adapter crate (`adapter-host`).
# Added at step 01-06 of the cgroup-fs-port migration: the `serve`
# subcommand constructs `Arc::new(RealCgroupFs::new())` (with a
# test-only `OVERDRIVE_TEST_PROBE_ROOT` override) and calls
# `.probe().await` at the composition root BEFORE `run_server`
# starts the worker subsystem. Per ADR-0054 § Composition root
# wiring. The binary IS the composition root per `.claude/rules/
# development.md` § "Port-trait dependencies" — naming the
# production binding here is the intended shape.
overdrive-host.path                = "../overdrive-host"
overdrive-control-plane.path       = "../overdrive-control-plane"
eyre.workspace                     = true
color-eyre.workspace               = true
clap.workspace                     = true
tokio.workspace                    = true
tracing.workspace                  = true
tracing-subscriber.workspace       = true
# Slice 02 step 02-04: `submit_streaming` calls `Response::bytes_stream()`
# which requires the `stream` feature. Workspace `reqwest` has only
# `rustls-tls`, `json`, `http2` enabled by default — `stream` is added
# here as an additive feature on top of the workspace base.
reqwest                            = { workspace = true, features = ["stream"] }
# Slice 02 step 02-04 — `submit_streaming` consumes a streaming NDJSON
# response via `reqwest::Response::bytes_stream()`. `futures::StreamExt`
# drives `.next().await` on the stream; `bytes::BytesMut` accumulates
# partial chunks across `recv` boundaries before splitting on `b'\n'`.
futures.workspace                  = true
bytes.workspace                    = true
# Used in `http_client::stringify_reqwest_error` to walk a
# `reqwest::Error` source chain looking for
# `rustls::Error::InvalidCertificate(...)` so the operator-facing
# message can distinguish a TLS handshake failure (trust-material
# mismatch — re-run `overdrive serve`) from a pure TCP-`ECONNREFUSED`
# (server not running). Per `fix-cli-cannot-reach-control-plane` Step
# 01-03 (RCA §Secondary fix). The reqwest client itself is configured
# `.use_rustls_tls()` so the rustls error type is what surfaces in the
# `Error::source()` chain on cert-verification failure.
rustls.workspace                   = true
url.workspace                      = true
thiserror.workspace                = true
serde.workspace                    = true
serde_json.workspace               = true
toml.workspace                     = true

[dev-dependencies]
overdrive-control-plane.path = "../overdrive-control-plane"
tempfile.workspace           = true
base64.workspace             = true
# Per ADR-0019 the operator config is TOML; the `toml` runtime dep
# above covers both the `deploy` spec loader and the integration
# tests that round-trip the trust triple. No YAML serde backend
# (`serde_yaml` / `serde_yml`) in this crate's dependency graph — the
# absence is enforced by `cargo xtask yaml-free-cli` in CI (ADR-0019
# §Consequences → Enforcement).
#
# `rkyv` is used ONLY by the walking-skeleton test to locally
# reproduce the server-side spec-digest computation (SHA-256 of
# rkyv-archived Job bytes, per ADR-0002) so the test can assert
# byte-identity with the server's response.
rkyv.workspace               = true
# `overdrive-store-local` is used ONLY by the walking-skeleton test
# to back-door read the `LocalIntentStore` after `serve::run` shuts
# down. The DISTILL review's BLOCK verdict required this back-door
# read so the WS proves end-to-end persistence (not just the
# client-visible `spec_digest`). The pattern mirrors
# `crates/overdrive-control-plane/tests/acceptance/submit_job_idempotency.rs`.
overdrive-store-local.path   = "../overdrive-store-local"
# `overdrive-sim` provides the `SimDataplane` adapter every CLI
# integration test injects via `serve::run_with_dataplane`. Per step
# 02-02 of `backend-discovery-bridge-service-reachability` the
# production `serve::run` constructs `EbpfDataplane`, which requires
# CAP_NET_ADMIN / CAP_BPF — too heavy for tests whose subject under
# test is the HTTPS / CLI / observation-row surface. The architecture
# (architecture.md § 4.7) prescribes `SimDataplane` injection for this
# lane.
overdrive-sim.path           = "../overdrive-sim"
# `serial_test` serialises tests that mutate process-wide environment
# variables. Rust edition 2024 + `unsafe_op_in_unsafe_fn = deny` makes
# `std::env::set_var` / `std::env::remove_var` explicit unsafe, but
# that only guards the function signature — racing calls across
# parallel nextest threads would still clobber one another. The
# `#[serial(env)]` attribute gives per-group mutual exclusion.
serial_test.workspace        = true
# `proptest` drives the S-03-08 KPI K3 byte-equality property over
# rendered Exit column vs persisted exit_code (1024 cases). Per
# `.claude/rules/testing.md` § "Property-based testing (proptest)"
# the default case count is preserved here — do NOT lower it to dodge
# wall-clock budget; the render fns are pure-function-shaped and
# 1024 cases run in well under the slow-test budget.
proptest.workspace           = true
# Slice 06 step 02-03 — `insta` pins the per-mechanic Probes-section
# line shapes as golden-output snapshots (the PBT-paradigm EXEMPT
# golden-file case; the `ProbeRenderIsKindGuarded` proptest on the
# adjacent kind-guard slot compensates). Inline snapshots keep the
# golden in the test source for same-diff review.
insta.workspace              = true
